--- a/word2vec/Visualizing_embeddings.ipynb
+++ b/word2vec/Visualizing_embeddings.ipynb
@@ -20,6 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 正文开始\n",
     "我发现嵌入的概念是机器学习中最迷人的想法之一。如果您曾经使用Siri，Google智能助理，Alexa，谷歌翻译，甚至智能手机键盘进行下一词预测，那么您很有可能从这个已经成为自然语言处理模型核心的想法中受益。在过去的几十年中，使用嵌入技术进行神经模型已有相当大的发展（最近的发展包括BERT和GPT2 等尖端模型的语境化嵌入）。\n",
     "\n",
     "自2013年以来，Word2vec一直是一种有效创建单词嵌入的方法。除了词嵌入字的方法之外，它的一些概念已经被证明可以在非语言任务中有效地创建推荐引擎和理解顺序数据。比如Airbnb，阿里巴巴，Spotify和Anghami这样的公司都从NLP世界中创造出这一优秀的工具并将其用于生产中，从而为新型推荐引擎提供支持。\n",
@@ -593,7 +594,7 @@
     "## 带负采样的skipgram（SGNS）\n",
     "我们现在已经介绍了word2vec中的两个核心思想：\n",
     "\n",
-    "另一个被称为带有负采样的skipgram。\n",
+    "负采样和skipgram。\n",
     "![](images/skipgram-with-negative-sampling.png)"
    ]
   },
@@ -652,7 +653,7 @@
     "负样本的数量是训练过程的另一个因素。原始论文里负样本数量为5-20。它还指出，当你拥有足够大的数据集时，2-5似乎已经足够了。Gensim默认为5个负样本。\n",
     "## 结论\n",
     "\n",
-    "我希望你现在对word嵌入和word2vec算法有所了解。我也希望现在当你读到一篇提到“skip gram with negative sampling”（SGNS）的论文时，你会对这些概念有了更好的认识。\n",
+    "我希望你现在对词嵌入和word2vec算法有所了解。我也希望现在当你读到一篇提到“skip gram with negative sampling”（SGNS）的论文时，你会对这些概念有了更好的认识。\n",
     "\n",
     "本文作者：[jalammar](https://twitter.com/jalammar)。"
    ]
