--- a/PyTorch_beginner/3.神经网络.ipynb
+++ b/PyTorch_beginner/3.神经网络.ipynb
@@ -4,43 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 60分钟入门深度学习工具-PyTorch(三、神经网络)\n",
-    "**作者**：Soumith Chintala\n",
+    "## 前言\n",
     "\n",
+    "原文翻译自：[Deep Learning with PyTorch: A 60 Minute Blitz](https://pytorch.org/tutorials/beginner/deep_learning_60min_blitz.html)\n",
     "\n",
-    "原文翻译自：https://pytorch.org/tutorials/beginner/deep_learning_60min_blitz.html\n",
-    "    \n",
-    "中文翻译、注释制作：黄海广\n",
+    "翻译：[林不清](https://www.zhihu.com/people/lu-guo-92-42-88)\n",
     "\n",
-    "github：https://github.com/fengdu78\n",
+    "整理：机器学习初学者公众号 ![gongzhong](images/gongzhong.jpg)\n",
     "\n",
-    "代码全部测试通过。\n",
+    "## 目录\n",
     "\n",
-    "配置环境：PyTorch 1.0，python 3.6，\n",
+    "[60分钟入门PyTorch（一）——Tensors](https://zhuanlan.zhihu.com/p/347676809)\n",
     "\n",
-    "主机：显卡：一块1080ti；内存：32g（注：绝大部分代码不需要GPU）\n",
-    "![公众号](images/gongzhong.jpg)\n",
-    "### 目录\n",
-    "* 1.[Pytorch是什么？](60分钟入门PyTorch-1.PyTorch是什么？.ipynb)\n",
-    "* 2.[AUTOGRAD](60分钟入门PyTorch-2.AUTOGRAD.ipynb)\n",
-    "* 3.[神经网络](60分钟入门PyTorch-3.神经网络.ipynb)\n",
-    "* 4.[训练一个分类器](60分钟入门PyTorch-4.训练一个分类器.ipynb)\n",
-    "* 5.[数据并行](60分钟入门PyTorch-5.数据并行.ipynb)"
+    "[60分钟入门PyTorch（二）——Autograd自动求导](https://zhuanlan.zhihu.com/p/347672836)\n",
+    "\n",
+    "[60分钟入门Pytorch（三）——神经网络](https://zhuanlan.zhihu.com/p/347678492)\n",
+    "\n",
+    "[60分钟入门PyTorch（四）——训练一个分类器](https://zhuanlan.zhihu.com/p/347681137)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 三、神经网络"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 神经网络\n",
+    "\n",
     "可以使用`torch.nn`包来构建神经网络.\n",
-    "\n",
     "你已知道`autograd`包,`nn`包依赖`autograd`包来定义模型并求导.一个`nn.Module`包含各个层和一个`forward(input)`方法,该方法返回`output`."
    ]
   },
@@ -75,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,9 +81,9 @@
      "output_type": "stream",
      "text": [
       "Net(\n",
-      "  (conv1): Conv2d(1, 6, kernel_size=(5, 5), stride=(1, 1))\n",
-      "  (conv2): Conv2d(6, 16, kernel_size=(5, 5), stride=(1, 1))\n",
-      "  (fc1): Linear(in_features=400, out_features=120, bias=True)\n",
+      "  (conv1): Conv2d(1, 6, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (conv2): Conv2d(6, 16, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (fc1): Linear(in_features=576, out_features=120, bias=True)\n",
       "  (fc2): Linear(in_features=120, out_features=84, bias=True)\n",
       "  (fc3): Linear(in_features=84, out_features=10, bias=True)\n",
       ")\n"
@@ -97,16 +95,17 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
+    "\n",
     "class Net(nn.Module):\n",
     "\n",
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
-    "        # 1 input image channel, 6 output channels, 5x5 square convolution\n",
+    "        # 1 input image channel, 6 output channels, 3x3 square convolution\n",
     "        # kernel\n",
-    "        self.conv1 = nn.Conv2d(1, 6, 5)\n",
-    "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
+    "        self.conv1 = nn.Conv2d(1, 6, 3)\n",
+    "        self.conv2 = nn.Conv2d(6, 16, 3)\n",
     "        # an affine operation: y = Wx + b\n",
-    "        self.fc1 = nn.Linear(16 * 5 * 5, 120)\n",
+    "        self.fc1 = nn.Linear(16 * 6 * 6, 120)  # 6*6 from image dimension \n",
     "        self.fc2 = nn.Linear(120, 84)\n",
     "        self.fc3 = nn.Linear(84, 10)\n",
     "\n",
@@ -135,40 +134,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "你只需定义`forward`函数,`backward`函数(计算梯度)在使用`autograd`时自动为你创建.你可以在`forward`函数中使用`Tensor`的任何操作。\n",
     "\n",
     "`net.parameters()`返回模型需要学习的参数。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "torch.Size([6, 1, 5, 5])\n"
-     ]
-    }
-   ],
-   "source": [
-    "params = list(net.parameters())\n",
-    "print(len(params))\n",
-    "print(params[0].size())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`forward`的输入和输出都是`autograd.Variable`.注意:这个网络(LeNet)期望的输入大小是32\\*32.如果使用MNIST数据集来训练这个网络,请把图片大小重新调整到32*32."
    ]
   },
   {
@@ -180,8 +150,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.1217,  0.0449, -0.0392, -0.1103, -0.0534, -0.1108, -0.0565,  0.0116,\n",
-      "          0.0867,  0.0102]], grad_fn=<AddmmBackward>)\n"
+      "10\n",
+      "torch.Size([6, 1, 3, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = list(net.parameters())\n",
+    "print(len(params))\n",
+    "print(params[0].size())  # conv1's .weight"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "构造一个随机的32*32的输入，注意:这个网络(LeNet)期望的输入大小是32*32.如果使用MNIST数据集来训练这个网络,请把图片大小重新调整到32*32."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.0765,  0.0522,  0.0820,  0.0109,  0.0004,  0.0184,  0.1024,  0.0509,\n",
+      "          0.0917, -0.0164]], grad_fn=<AddmmBackward>)\n"
      ]
     }
    ],
@@ -193,19 +190,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "将所有参数的梯度缓存清零,然后进行随机梯度的的反向传播."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "net.zero_grad()\n",
@@ -216,61 +209,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 注意\n",
+    "<div class=\"alert alert-info\"><h4>注意</h4>\n",
+    "``torch.nn``只支持小批量输入,整个torch.nn包都只支持小批量样本,而不支持单个样本\n",
+    "例如,``nn.Conv2d``将接受一个4维的张量,每一维分别是$nSamples\\times nChannels\\times Height\\times Width$(样本数*通道数*高*宽).\n",
+    "如果你有单个样本,只需使用`input.unsqueeze(0)`来添加其它的维数.\n",
+    "在继续之前,我们回顾一下到目前为止见过的所有类.\n",
     "\n",
-    "* `torch.nn` 只支持小批量输入,整个`torch.nn`包都只支持小批量样本,而不支持单个样本\n",
-    "* 例如,`nn.Conv2d`将接受一个4维的张量,每一维分别是$nSamples\\times nChannels\\times Height\\times Width$(样本数\\*通道数\\*高\\*宽).\n",
-    "* 如果你有单个样本,只需使用`input.unsqueeze(0)`来添加其它的维数.\n",
-    "\n",
-    "在继续之前,我们回顾一下到目前为止见过的所有类."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 回顾\n",
     "\n",
     "* `torch.Tensor`-支持自动编程操作（如`backward()`）的多维数组。 同时保持梯度的张量。\n",
     "* `nn.Module`-神经网络模块.封装参数,移动到GPU上运行,导出,加载等\n",
     "* `nn.Parameter`-一种张量,当把它赋值给一个`Module`时,被自动的注册为参数.\n",
-    "\n",
     "* `autograd.Function`-实现一个自动求导操作的前向和反向定义, 每个张量操作都会创建至少一个`Function`节点，该节点连接到创建张量并对其历史进行编码的函数。\n",
+    "\n",
     "#### 现在,我们包含了如下内容:\n",
     "\n",
     "* 定义一个神经网络\n",
     "* 处理输入和调用`backward`\n",
     "\n",
+    "\n",
     "#### 剩下的内容:\n",
     "\n",
     "* 计算损失值\n",
-    "* 更新神经网络的权值"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* 更新神经网络的权值\n",
+    "\n",
     "### 损失函数\n",
     "一个损失函数接受一对(output, target)作为输入(output为网络的输出,target为实际值),计算一个值来估计网络的输出和目标值相差多少。\n",
     "\n",
-    "在nn包中有几种不同的损失函数.一个简单的损失函数是:`nn.MSELoss`,它计算输入和目标之间的均方误差。\n",
+    "在nn包中有几种不同的[损失函数](https://pytorch.org/docs/nn.html#loss-functions>).一个简单的损失函数是:`nn.MSELoss`,它计算输入和目标之间的均方误差。\n",
     "\n",
-    "例如:"
+    "例如:\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.5663, grad_fn=<MseLossBackward>)\n"
+      "tensor(1.5801, grad_fn=<MseLossBackward>)\n"
      ]
     }
    ],
@@ -288,24 +269,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "现在,你反向跟踪`loss`,使用它的`.grad_fn`属性,你会看到向下面这样的一个计算图:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "input -> conv2d -> relu -> maxpool2d -> conv2d -> relu -> maxpool2d\n",
-    "     -> view -> linear -> relu -> linear -> relu -> linear\n",
-    "     -> MSELoss\n",
-    "     -> loss"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "所以, 当你调用`loss.backward()`,整个图被区分为损失以及图中所有具有`requires_grad = True`的张量，并且其`.grad` 张量的梯度累积。\n",
+    "现在,你反向跟踪``loss``,使用它的``.grad_fn``属性,你会看到向下面这样的一个计算图:\n",
+    " input -> conv2d -> relu -> maxpool2d -> conv2d -> relu -> maxpool2d\n",
+    "          -> view -> linear -> relu -> linear -> relu -> linear\n",
+    "          -> MSELoss\n",
+    "          -> loss\n",
+    "          \n",
+    "所以, 当你调用``loss.backward()``,整个图被区分为损失以及图中所有具有``requires_grad = True``的张量，并且其``.grad`` 张量的梯度累积。\n",
     "\n",
     "为了说明,我们反向跟踪几步:"
    ]
@@ -319,16 +289,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<MseLossBackward object at 0x0000029E54C509B0>\n",
-      "<AddmmBackward object at 0x0000029E54C50898>\n",
-      "<AccumulateGrad object at 0x0000029E54C509B0>\n"
+      "<MseLossBackward object at 0x0000023193A40E08>\n",
+      "<AddmmBackward object at 0x0000023193A40E48>\n",
+      "<AccumulateGrad object at 0x0000023193A40E08>\n"
      ]
     }
    ],
    "source": [
     "print(loss.grad_fn)  # MSELoss\n",
     "print(loss.grad_fn.next_functions[0][0])  # Linear\n",
-    "print(loss.grad_fn.next_functions[0][0].next_functions[0][0])"
+    "print(loss.grad_fn.next_functions[0][0].next_functions[0][0])  # ReLU"
    ]
   },
   {
@@ -353,7 +323,7 @@
       "conv1.bias.grad before backward\n",
       "tensor([0., 0., 0., 0., 0., 0.])\n",
       "conv1.bias.grad after backward\n",
-      "tensor([ 0.0006, -0.0164,  0.0122, -0.0060, -0.0056, -0.0052])\n"
+      "tensor([ 0.0013,  0.0068,  0.0096,  0.0039, -0.0105, -0.0016])\n"
      ]
     }
    ],
@@ -373,6 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "现在，我们知道了该如何使用损失函数\n",
     "#### 稍后阅读:\n",
     "\n",
     "神经网络包包含了各种用来构成深度神经网络构建块的模块和损失函数,一份完整的文档查看[这里](https://pytorch.org/docs/nn)\n",
@@ -396,9 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learning_rate = 0.01\n",
@@ -410,15 +379,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "然而,当你使用神经网络是,你想要使用各种不同的更新规则,比如`SGD,Nesterov-SGD`,`Adam`, `RMSPROP`等.为了能做到这一点,我们构建了一个包`torch.optim`实现了所有的这些规则.使用他们非常简单:"
+    "然而,当你使用神经网络是,你想要使用各种不同的更新规则,比如``SGD``,``Nesterov-SGD``,``Adam``, ``RMSPROP``等.为了能做到这一点,我们构建了一个包``torch.optim``实现了所有的这些规则.使用他们非常简单："
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch.optim as optim\n",
@@ -442,17 +409,6 @@
     "\n",
     "观察如何使用`optimizer.zero_grad()`手动将梯度缓冲区设置为零。 这是因为梯度是反向传播部分中的说明那样是累积的。"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "本章的官方代码：\n",
-    "* Python：[neural_networks_tutorial.py](download/neural_networks_tutorial.py)\n",
-    "* Jupyter notebook:[neural_networks_tutorial.ipynb](download/neural_networks_tutorial.ipynb)"
-   ]
   }
  ],
  "metadata": {
@@ -471,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
